# eb-sched

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  README.md  vcpkg.json
src/: ebsched.cpp  ebsched.h  main.cpp
